--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Bazooka Shop</title>
-        <link href="text/css"rel="stylesheet" href="syles.css"/>
+        <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
+        <link type="text/css" rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <h1 style="color:black"> Bazooka Pop Up Shop</h1>
