--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
         <link type="text/css" rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <h1 style="color:black"> Bazooka Pop Up Shop</h1>
-        <div<>
-            <p>
-                <h2>
-                    Pop up shop. December 25, 2019.
-                </h2>
-            </p>
+        <h1 style="color:rgb(106, 253, 253)"> Bazooka Pop Up Shop</h1>
+                <h2 style="color:rgb(106, 253, 253)"> Bazooka up shop. December 25, 2019.</h2>
+        <div class="product-space"> 
+            <div class="phantom-card">
+                <div class="phantom-info">
+                    <img src="Phantom.jpg" style="width: 100%; border-radius: 24px;"></img>
+                </div>
+                </div>
         </div>
     </body>
 </html>
