--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
             <div class="phantom-card">
                 <div class="phantom-info">
                     <img src="Phantom.jpg" style="width: 100%; border-radius: 24px;"></img>
+                    <h1 style="font-size: 25px;">Finalmouse Ultralight Phantom</h1>
+                    <p style="font-size: 20px; font-weight: bold;">$89.99</p>
+                    <p></p>
+                    <p>
+                        <button class="add-button">Sold Out</button>
+                        
+                    </p>
                 </div>
-                </div>
+            </div>
         </div>
     </body>
 </html>
