--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="product-space"> 
             <div class="phantom-card">
                 <div class="phantom-info">
-                    <img src="Phantom.jpg" style="width: 100%; border-radius: 24px;"></img>
+                    <img src="Phantom.jpg" style="width: 100%; border-radius: 16px;"></img>
                     <h1 style="font-size: 25px;">Finalmouse Ultralight Phantom</h1>
                     <p style="font-size: 20px; font-weight: bold;">$89.99</p>
                     <p></p>
@@ -22,6 +22,16 @@
                     </p>
                 </div>
             </div>
+            <div class="princess-card">
+                    <div class="princess-info">
+                        <img src="Princess.jpg" style="width: 100%; border-radius: 24px;"></img>
+                        <h1 style="font-size: 25px;">Princess </h1>
+                        <h1 style="font-size: 25px;">the </h1>
+                        <h1 style="font-size: 25px;">servant </h1>
+                        <p style="font-size: 20px; font-weight: bold;">$0.89</p>
+                        <p></p>
+                        <p>
+                            <button class="add-button">Sold Out</button>
         </div>
     </body>
 </html>
