--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             <div class="phantom-card">
                 <div class="phantom-info">
                     <img src="Phantom.jpg" style="width: 100%; border-radius: 16px;"></img>
-                    <h1 style="font-size: 25px;">Finalmouse Ultralight Phantom</h1>
+                    <h1 style="font-size: 25px;">Finalmouse</h1>
+                    <h1 style="font-size: 25px;">Ultralight</h1>
+                    <h1 style="font-size: 25px;">Phantom</h1>
                     <p style="font-size: 20px; font-weight: bold;">$89.99</p>
                     <p></p>
                     <p>
