--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     </head>
     <body>
         <h1 style="color:rgb(106, 253, 253)"> Bazooka Pop Up Shop</h1>
-                <h2 style="color:rgb(106, 253, 253)"> Bazooka up shop. December 25, 2019.</h2>
+                <h2 style="color:rgb(106, 253, 253)"> Bazooka up shop. January 24, 2020.</h2>
         <div class="product-space"> 
-            <div class="phantom-card">
-                <div class="phantom-info">
-                    <img src="Phantom.jpg" style="width: 100%; border-radius: 16px;"></img>
+            <div class="cape-card">
+                <div class="cape-info">
+                    <img src="Cape.jpg" style="width: 100%; border-radius: 16px;"></img>
                     <h1 style="font-size: 25px;">Finalmouse</h1>
                     <h1 style="font-size: 25px;">Ultralight</h1>
-                    <h1 style="font-size: 25px;">Phantom</h1>
-                    <p style="font-size: 20px; font-weight: bold;">$89.99</p>
+                    <h1 style="font-size: 25px;">Cape Town</h1>
+                    <p style="font-size: 20px; font-weight: bold;">$119.99</p>
                     <p></p>
                     <p>
                         <button class="add-button">Sold Out</button>
@@ -24,13 +24,13 @@
                     </p>
                 </div>
             </div>
-            <div class="princess-card">
-                    <div class="princess-info">
-                        <img src="Princess.jpg" style="width: 100%; border-radius: 24px;"></img>
-                        <h1 style="font-size: 25px;">Princess </h1>
-                        <h1 style="font-size: 25px;">the </h1>
-                        <h1 style="font-size: 25px;">servant </h1>
-                        <p style="font-size: 20px; font-weight: bold;">$0.89</p>
+            <div class="ducky-card">
+                    <div class="ducky-info">
+                        <img src="Ducky.jpg" style="width: 100%; border-radius: 24px;"></img>
+                        <h1 style="font-size: 25px;">Ducky One 2 Mini </h1>
+                        <h1 style="font-size: 25px;">Frozen Llama</h1>
+                        <h1 style="font-size: 25px;">LE 5000 </h1>
+                        <p style="font-size: 20px; font-weight: bold;">$199.99</p>
                         <p></p>
                         <p>
                             <button class="add-button">Sold Out</button>
