--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="ducky-card">
                     <div class="ducky-info">
-                        <img src="Ducky.jpg" style="width: 100%; border-radius: 24px;"></img>
+                        <img src="Llama.jpg" style="width: 100%; border-radius: 24px;"></img>
                         <h1 style="font-size: 25px;">Ducky One 2 Mini </h1>
                         <h1 style="font-size: 25px;">Frozen Llama</h1>
                         <h1 style="font-size: 25px;">LE 5000 </h1>
