--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="product-space"> 
             <div class="cape-card">
                 <div class="cape-info">
-                    <img src="Cape.jpg" style="width: 100%; border-radius: 16px;"></img>
+                    <img src="Cape.jpg" style="width: 100%; border-radius: 24px;"></img>
                     <h1 style="font-size: 25px;">Finalmouse</h1>
                     <h1 style="font-size: 25px;">Ultralight</h1>
                     <h1 style="font-size: 25px;">Cape Town</h1>
@@ -34,6 +34,21 @@
                         <p></p>
                         <p>
                             <button class="add-button">Sold Out</button>
-        </div>
+                    </div>
+            </div>        
+
+            <div class="dragon-card">
+                    <div class="dragon-info">
+                        <img src="Dragon.jpg" style="width: 100%; border-radius: 24px;"></img>
+                        <h1 style="font-size: 25px;">Genji's</h1>
+                        <h1 style="font-size: 25px;">Ryuichi moji</h1>
+                        <h1 style="font-size: 25px;">Ultra Sword</h1>
+                        <p style="font-size: 20px; font-weight: bold;">$2,999.99</p>
+                        <p></p>
+                        <p>
+                             <button class="add-button">Sold Out</button>
+                    </div>
+            </div>
+        <div>
     </body>
 </html>
