--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                             <button class="add-button">Sold Out</button>
                     </div>
             </div>        
-
             <div class="dragon-card">
                     <div class="dragon-info">
                         <img src="Dragon.jpg" style="width: 100%; border-radius: 24px;"></img>
@@ -49,6 +48,18 @@
                              <button class="add-button">Sold Out</button>
                     </div>
             </div>
+            <div class="bio-card">
+                <div class="bio-info">
+                    <img src="Cancer.png" style="width: 100%; border-radius: 24px;"></img>
+                    <h1 style="font-size: 25px;">AP Biology</h1>
+                    <h1 style="font-size: 25px;">Cure for Cancer</h1>
+                    <h1 style="font-size: 25px;">Free Response</h1>
+                    <p style="font-size: 20px; font-weight: bold;">$9,999.99</p>
+                    <p></p>
+                    <p>
+                         <button class="add-button">Sold Out</button>
+                </div>
+        </div>
         <div>
     </body>
 </html>
