--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="cape-info">
                     <img src="Cape.jpg" style="width: 100%; border-radius: 24px;"></img>
                     <h1 style="font-size: 25px;">Finalmouse</h1>
-                    <h1 style="font-size: 25px;">Ultralight</h1>
+                    <h1 style="font-size: 25px;">Ultralight Pro</h1>
                     <h1 style="font-size: 25px;">Cape Town</h1>
                     <p style="font-size: 20px; font-weight: bold;">$119.99</p>
                     <p></p>
