--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                     <p style="font-size: 20px; font-weight: bold;">$9,999.99</p>
                     <p></p>
                     <p>
-                         <button class="add-button">Sold Out</button>
+                         <button class="add-button">View</button>
+                         <a href="cancer.html"title="AP Biology">View</a>
                 </div>
         </div>
         <div>
