--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p></p>
                     <p>
                          <button class="add-button">View</button>
-                         <a href="cancer.html"title="AP Biology">View</a>
+                         <a href="cancer.html"title="add-button">View</a>
                 </div>
         </div>
         <div>
