--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
                     <p style="font-size: 20px; font-weight: bold;">$9,999.99</p>
                     <p></p>
                     <p>
-                         <button class="add-button">View</button>
-                         <a href="cancer.html"title="add-button">View</a>
+                        <div class="sec-nav">
+                            <a href="cancer.html"title="AP">View</a>
+                            <span style="color:white; font-weight: bolder;font-size: 25px;">/</span>
+                        </div>    
                 </div>
         </div>
         <div>
