--- a/index.html
+++ b/index.html
@@ -10,46 +10,51 @@
         <h1 style="color:rgb(106, 253, 253)"> Bazooka Pop Up Shop</h1>
                 <h2 style="color:rgb(106, 253, 253)"> Bazooka up shop. January 24, 2020.</h2>
         <div class="product-space"> 
-            <div class="cape-card">
-                <div class="cape-info">
-                    <img src="Cape.jpg" style="width: 100%; border-radius: 24px;"></img>
+            <div class="finalmouse-card">
+                <div class="finalmouse-info">
+                    <img src="Finalmouse.jpg" style="width: 100%; border-radius: 24px;"></img>
                     <h1 style="font-size: 25px;">Finalmouse</h1>
                     <h1 style="font-size: 25px;">Ultralight Pro</h1>
                     <h1 style="font-size: 25px;">Cape Town</h1>
                     <p style="font-size: 20px; font-weight: bold;">$119.99</p>
                     <p></p>
                     <p>
-                        <button class="add-button">Sold Out</button>
-                        
+                        <div class="sec-nav">
+                            <a href="finalmouse.html"title="FM"><button class="add-button">View</button></a>
+                        </div>   
                     </p>
                 </div>
             </div>
             <div class="ducky-card">
                     <div class="ducky-info">
-                        <img src="Llama.jpg" style="width: 100%; border-radius: 24px;"></img>
+                        <img src="Ducky.jpg" style="width: 100%; border-radius: 24px;"></img>
                         <h1 style="font-size: 25px;">Ducky One 2 Mini </h1>
                         <h1 style="font-size: 25px;">Frozen Llama</h1>
                         <h1 style="font-size: 25px;">LE 5000 </h1>
                         <p style="font-size: 20px; font-weight: bold;">$199.99</p>
                         <p></p>
                         <p>
-                            <button class="add-button">Sold Out</button>
+                            <div class="sec-nav">
+                                <a href="ducky.html"title="MK"><button class="add-button">View</button></a>
+                            </div> 
                     </div>
             </div>        
-            <div class="dragon-card">
-                    <div class="dragon-info">
-                        <img src="Dragon.jpg" style="width: 100%; border-radius: 24px;"></img>
+            <div class="genji-card">
+                    <div class="genji-info">
+                        <img src="Genji.jpg" style="width: 100%; border-radius: 24px;"></img>
                         <h1 style="font-size: 25px;">Genji's</h1>
                         <h1 style="font-size: 25px;">Ryuichi moji</h1>
                         <h1 style="font-size: 25px;">Ultra Sword</h1>
                         <p style="font-size: 20px; font-weight: bold;">$2,999.99</p>
                         <p></p>
                         <p>
-                             <button class="add-button">Sold Out</button>
+                            <div class="sec-nav">
+                                <a href="genji.html"title="OW"><button class="add-button">View</button></a>
+                            </div> 
                     </div>
             </div>
-            <div class="bio-card">
-                <div class="bio-info">
+            <div class="cancer-card">
+                <div class="cancer-info">
                     <img src="Cancer.png" style="width: 100%; border-radius: 24px;"></img>
                     <h1 style="font-size: 25px;">AP Biology</h1>
                     <h1 style="font-size: 25px;">Cure for Cancer</h1>
@@ -58,8 +63,7 @@
                     <p></p>
                     <p>
                         <div class="sec-nav">
-                            <a href="cancer.html"title="AP">View</a>
-                            <span style="color:white; font-weight: bolder;font-size: 25px;">/</span>
+                            <a href="cancer.html"title="AP"><button class="add-button">View</button></a>
                         </div>    
                 </div>
         </div>
