--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link type="text/css" rel="stylesheet" href="styles.css"/>
     </head>
     <body>
+         <audio controls><source src="Aja.mp3" autoplay type="audio mp3"></audio>
         <h1 style="color:rgb(106, 253, 253)"> Bazooka Pop Up Shop</h1>
                 <h2 style="color:rgb(106, 253, 253)"> Bazooka up shop. January 24, 2020.</h2>
         <div class="product-space"> 
