--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="res-card">
             <div class="res-info">
-                <h1 style="font-size: 25px;">POGGERS</h1>
+                <h1 style="font-size: 25px;">Overwatch</h1>
                 <p></p>
                 <p>
                     <div class="sec-nav">
